--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -149,11 +149,11 @@
         </dependency>
          
         <!-- Oracle -->
-        <dependency>
+        <!-- <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc14</artifactId>
             <version>10.2.0.4.0</version>
-        </dependency>
+        </dependency> -->
  
         <!-- AspectJ -->
         <dependency>
